--- a/sedcod.html
+++ b/sedcod.html
@@ -2,7 +2,7 @@
 <html class="dark" lang="en"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Case Study: Next-Gen SaaS Web App</title>
+<title>Ecommerece</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet" />
@@ -198,9 +198,8 @@ The solution focused on simplicity, performance, and usability, ensuring both cu
 <span class="font-bold tracking-tight text-slate-400">Jebeshan © 2024</span>
 </div>
 <div class="flex gap-8 text-sm text-slate-500 dark:text-slate-400">
-<a class="hover:text-primary transition-colors" href="#">Dribbble</a>
-<a class="hover:text-primary transition-colors" href="#">LinkedIn</a>
-<a class="hover:text-primary transition-colors" href="#">Twitter</a>
+<a class="hover:text-primary transition-colors" href="https://www.linkedin.com/in/jebeshan-j-2477b520b/">LinkedIn</a>
+<a class="hover:text-primary transition-colors" href="https://github.com/JJebeshan">Github</a>
 </div>
 <p class="text-sm text-slate-500 dark:text-slate-400">Built with logic, clarity, and purpose.</p>
 </div>
