--- a/third.html
+++ b/third.html
@@ -2,7 +2,7 @@
 <html class="dark" lang="en"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Case Study: Next-Gen SaaS Web App</title>
+<title>Media Sharing Platform</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet" />
@@ -196,14 +196,13 @@ Traditional media platforms depend heavily on cloud infrastructure, making them 
 <path clip-rule="evenodd" d="M24 0.757355L47.2426 24L24 47.2426L0.757355 24L24 0.757355ZM21 35.7574V12.2426L9.24264 24L21 35.7574Z" fill="currentColor" fill-rule="evenodd"></path>
 </svg>
 </div>
-<span class="font-bold tracking-tight text-slate-400">PORTFOLIO © 2024</span>
+<span class="font-bold tracking-tight text-slate-400">Jebeshan © 2026</span>
 </div>
 <div class="flex gap-8 text-sm text-slate-500 dark:text-slate-400">
-<a class="hover:text-primary transition-colors" href="#">Dribbble</a>
-<a class="hover:text-primary transition-colors" href="#">LinkedIn</a>
-<a class="hover:text-primary transition-colors" href="#">Twitter</a>
+<a class="hover:text-primary transition-colors" href="https://www.linkedin.com/in/jebeshan-j-2477b520b/">LinkedIn</a>
+<a class="hover:text-primary transition-colors" href="https://github.com/JJebeshan">Github</a>
 </div>
-<p class="text-sm text-slate-500 dark:text-slate-400">Handcrafted in Design City</p>
+<p class="text-sm text-slate-500 dark:text-slate-400">Built with logic, clarity, and purpose.</p>
 </div>
 </footer>
 </main>
